edit some codes

--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
     <h2 id="mission-heding">My Mission in 2022</h2>
     <section class="mission-area">
         <!-- <h2 id="mission-heding">My Mission in 2022</h2> -->
-            <div class="mission misiion-1">
+            <div class="mission">
                 <img src="images/illustrators/illustrator-1.png" alt="">
                 <h3>Mission</h3>
                 <p>A mission is not simply a description of an organization by an external party, but an expression, made by its leaders, of their desires and intent for the organization. The purpose of a mission statement is to communicate the organisation's purpose and direction to its employees, customers, vendors, and other stakeholders. A mission statement also creates a sense of identity for its employees. Organizations normally do not change their mission statements over time, since they define their continuous, ongoing purpose and focus.</p>
             </div>
-            <div class="mission vission">
+            <div class="mission">
                 <img src="images/illustrators/illustrator-2.png" alt="">
                 <h3>Vission</h3>
                 <p>The million dollar question that we all asked ourselves at one time or the other is, why are we here? And where do we see ourselves in life? We all are here with a specific purpose but what helps us move and direct our purpose is a vision. What exactly is vision? .Vision gives direction and a glimpse over our life to make our goals and purpose become a reality. In order to understand where we want ourselves to be in life, we must have a clear vision over our life. So, once you understand that vision clarifies purpose, life will become simpler and more meaningful.</p>
             </div>
-            <div class="mission goals">
+            <div class="mission">
                 <img src="images/illustrators/illustrator-3.png" alt="">
                 <h3>Goals</h3>
                 <p>What exactly are life goals? Simply put, they're the things you would like to accomplish in your life. Life goals are the big things to work for and accomplish such as getting married and having a family, starting your own business, becoming a big-time executive, or traveling the globe. Life goals are essentially everything you want to do in life before passing on. They're the stuff people remember you by when you are no longer around.Why are goals so important? Setting goals gives you purpose, and they help you to guide your life. Think of life goals as your North Star. </p>
@@ -72,11 +72,11 @@
     </section>
 
     <section class="bonus-section">
-        <div class="image-1">
+        <div class="image">
             <img src="images/illustrators/illustrator-2.png" alt="">
             <img src="images/illustrators/illustrator-2.png" alt="">
         </div>
-        <div class="image-2">
+        <div class="image">
             <img src="images/pictures/coding.png" alt="">
             <img src="images/pictures/project.png" alt="">
         </div>
